--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
- <!--    <div id="donation-box">
+<!--     <div id="donation-box">
         <div class="hidden">
             <div class="donation-form">
                 <label class="donation-block align-left donation-text"><b>Tipo de Moneda</b>
@@ -21,6 +21,8 @@
                 <div class="amount">
                     <button class="button-45 donation-button-default donate-amount donation-inactive">20</button>
                     <button class="button-45 donation-button-default donate-amount donation-inactive">50</button>
+                     <button class="button-45 donation-button-default donate-amount donation-inactive">100</button>
+                    <button class="button-45 donation-button-default donate-amount donation-inactive">500</button>
                 </div>
                 <label class="donation-block align-left donation-text">Otras cantidades</label>
                 <input type="text" id="customamount" class="donation-input" placeholder="Ej: 10">
@@ -28,7 +30,7 @@
             </div>
             <div class="donation" style="">
                 <div class="donation-block"><img class="donation-image" src="https://www.joinnus.com/inc/donation/images/img-latav2.png">
-                </div><span class="donation-block donation-message">DONA AQUÍ</span><img class="powered" src="https://www.joinnus.com/inc/donation/images/powered.png" alt="">
+                </div><span class="donation-block donation-message">DONA AQUÍ</span><img class="powered_joinnus" src="https://www.joinnus.com/inc/donation/images/powered.png" alt="">
             </div>
         </div>
     </div> -->
