--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 
+
+
 <head>
     <link rel="stylesheet" type="text/css" href="css/donation.css">
     <title></title>
 </head>
 
 <body>
-<!--     <div id="donation-box">
-        <div class="hidden">
+<!--      <div id="donation-box">
+        <div class="donation-hidden">
             <div class="donation-form">
                 <label class="donation-block align-left donation-text"><b>Tipo de Moneda</b>
                 </label>
