--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<!--      <div id="donation-box">
+    <div id="donation-box">
         <div class="donation-hidden">
             <div class="donation-form">
                 <label class="donation-block align-left donation-text"><b>Tipo de Moneda</b>
@@ -21,7 +21,7 @@
                 <div class="amount">
                     <button class="button-45 donation-button-default donate-amount donation-inactive">20</button>
                     <button class="button-45 donation-button-default donate-amount donation-inactive">50</button>
-                     <button class="button-45 donation-button-default donate-amount donation-inactive">100</button>
+                    <button class="button-45 donation-button-default donate-amount donation-inactive">100</button>
                     <button class="button-45 donation-button-default donate-amount donation-inactive">500</button>
                 </div>
                 <label class="donation-block align-left donation-text">Otras cantidades</label>
@@ -33,7 +33,7 @@
                 </div><span class="donation-block donation-message">DONA AQUÍ</span><img class="powered_joinnus" src="https://www.joinnus.com/inc/donation/images/powered.png" alt="">
             </div>
         </div>
-    </div> -->
+    </div>
     <script type="text/javascript" src="js/donation.js"></script>
 </body>
 
