--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div id="donation-box">
+  <!--   <div id="donation-box">
         <div class="donation-hidden">
             <div class="donation-form">
                 <label class="donation-block align-left donation-text"><b>Tipo de Moneda</b>
@@ -34,7 +34,7 @@
                 </div><span class="donation-block donation-message">DONA AQUÍ</span><img class="powered_joinnus" src="https://www.joinnus.com/inc/donation/images/powered.png" alt="">
             </div>
         </div>
-    </div>
+    </div> -->
     <script type="text/javascript" src="js/donation.js"></script>
 </body>
 
