--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/donation.css">
     <title></title>
 </head>
@@ -10,6 +9,7 @@
 <body>
    <!--  <div id="donation-box">
         <div class="donation-hidden">
+            <a class="donation-close-widget" id="donation-close-widget">&times;</a>
             <div class="donation-form">
                 <label class="donation-block align-left donation-text"><b>Tipo de Moneda</b>
                 </label>
@@ -26,7 +26,7 @@
                     <button class="button-45 donation-button-default donate-amount donation-inactive">500</button>
                 </div>
                 <label class="donation-block align-left donation-text">Otras cantidades</label>
-                <input type="text" id="customamount" class="donation-input" placeholder="Ej: 10">
+                <input type="text" id="customamount" class="donation-input" placeholder="Ej: 75">
                 <button class="donation-button donation-button-default donation-active" id="donate">DONA AQUÍ</button>
             </div>
             <div class="donation" style="">
