--- a/techo.html
+++ b/techo.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="css/techo/techo.css">
+    <link rel="stylesheet" type="text/css" href="https://rawgit.com/Root-Control/widget/master/css/techo/techo.min.css">
     <title></title>
 </head>
 
@@ -17,7 +17,7 @@
             </div>
         </div>
     </div> -->
-    <script type="text/javascript" src="js/techo/techo.js"></script>
+    <script type="text/javascript" src="https://rawgit.com/Root-Control/widget/master/js/techo/techo.min.js"></script>
 </body>
 
 </html>
