--- a/liga.html
+++ b/liga.html
@@ -3,8 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-    <!-- <link rel="stylesheet" type="text/css" href="https://rawgit.com/Root-Control/widget/master/css/liga/liga.min.css"> -->
-    <link rel="stylesheet" href="css/liga/liga.css">
+    <link rel="stylesheet" type="text/css" href="https://rawgit.com/Root-Control/widget/master/css/liga/liga.min.css">
     <title></title>
 </head>
 
