--- a/sonrisa.html
+++ b/sonrisa.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="css/operacion_sonrisa/sonrisa.css">
+    <link rel="stylesheet" type="text/css" href="https://rawgit.com/Root-Control/widget/master/css/operacion_sonrisa/sonrisa.min.css">
     <title></title>
 </head>
 
@@ -18,7 +18,10 @@
             </div>
         </div>
     </div> -->
-    <script type="text/javascript" src="js/operacion_sonrisa/sonrisa.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="https://rawgit.com/Root-Control/widget/master/css/operacion_sonrisa/sonrisa.min.css">
+    <script type="text/javascript" src="https://rawgit.com/Root-Control/widget/master/js/operacion_sonrisa/sonrisa.min.js"></script>
+
 </body>
 
 </html>
