--- a/rpp/test.html
+++ b/rpp/test.html
@@ -1,22 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://rawgit.com/Root-Control/widget/master/rpp/css/joinnus-rpp.css">
-	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<title></title>
+
 </head>
 <body>
-<div id="joinnusWidgetContainer">
-Hola
-</div>
+<div id="joinnusWidgetContainer"></div>
 
-
-
-
-<script type="text/javascript" src="https://rawgit.com/Root-Control/widget/master/rpp/js/jn-widget.js"></script>
+<link rel="stylesheet" type="text/css" href="https://rawgit.com/Root-Control/widget/master/rpp/css/joinnus-rpp.min.css">
+<script type="text/javascript" src="https://rawgit.com/Root-Control/widget/master/rpp/js/jn-widget.min.js"></script>
 </body>
 </html>
