--- a/rpp/test.html
+++ b/rpp/test.html
@@ -4,9 +4,14 @@
 
 </head>
 <body>
-<div id="joinnusWidgetContainer"></div>
+	<div id="joinnusWidgetContainer">
+		
+	</div>
 
-<link rel="stylesheet" type="text/css" href="https://rawgit.com/Root-Control/widget/master/rpp/css/joinnus-rpp.min.css">
-<script type="text/javascript" src="https://rawgit.com/Root-Control/widget/master/rpp/js/jn-widget.min.js"></script>
+
+
+
+	<link rel="stylesheet" type="text/css" href="https://rawgit.com/Root-Control/widget/master/rpp/css/joinnus-rpp.min.css">
+	<script type="text/javascript" src="https://rawgit.com/Root-Control/widget/master/rpp/js/jn-widget.min.js"></script>
 </body>
 </html>
