--- a/techo.html
+++ b/techo.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <link rel="stylesheet" type="text/css" href="https://rawgit.com/Root-Control/widget/master/css/techo/techo.min.css">
+   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title></title>
 </head>
 
 <body>
-<!--     <div id="donation-techo-box">
-        <div class="donation-techo-hidden">
-            <a class="donation-techo-close-widget" id="donation-techo-close-widget">&times;</a>
-            
-            <div class="donation-techo" style="">
-                <div class="donation-techo-block"><img class="donation-techo-image" src="https://www.joinnus.com/inc/donation/images/img-latav2.png">
-                </div><span class="donation-techo-block donation-techo-message">DONA AQUÍ</span><img class="powered_joinnus" src="https://www.joinnus.com/inc/donation/images/powered.png" alt="">
-            </div>
-        </div>
-    </div> -->
-    <script type="text/javascript" src="https://rawgit.com/Root-Control/widget/master/js/techo/techo.min.js"></script>
+
+	<link rel="stylesheet" href="css/techo/techo.css">
+	<script src="js/techo/techo.js"></script>
+ <!--    <link rel="stylesheet" type="text/css" href="https://rawgit.com/Root-Control/widget/master/css/techo/techo.min.css">
+    <script type="text/javascript" src="https://rawgit.com/Root-Control/widget/master/js/techo/techo.min.js"></script> -->
 </body>
 
 </html>
