--- a/liga.html
+++ b/liga.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="https://rawgit.com/Root-Control/widget/master/css/liga/liga.min.css">
+    <link rel="stylesheet" type="text/css" href="css/liga/liga.css">
     <title></title>
 </head>
 
@@ -18,7 +18,7 @@
             </div>
         </div>
     </div> -->
-    <script type="text/javascript" src="https://rawgit.com/Root-Control/widget/master/js/liga/liga.min.js"></script>
+    <script type="text/javascript" src="js/liga/liga.js"></script>
 </body>
 
 </html>
